# SC

./: README.md
app/: Android.mk  AndroidManifest.xml  CMakeLists.txt  build.gradle  build.gradle~  local.properties  settings.gradle
app/cpp/: tv.cpp
app/cpp/source/: imwrite_yuv.cpp  tv.cpp
app/gradle/wrapper/: gradle-wrapper.properties
app/openCVLibrary342/: build.gradle
app/opencv4/: build.gradle  local.properties
app/opencv41/gradle/wrapper/: gradle-wrapper.properties
app/res/values/: camera2arrays.xml  qcomarrays.xml  qcomstrings.xml  strings.xml
app/sdk/: local.properties
app/sdk/gradle/wrapper/: gradle-wrapper.properties
app/src/com/android/camera/: CameraActivity.java  CaptureModule.java  FocusStateListener.java  SettingsActivity.java  SettingsManager.java  Storage.java
app/src/com/android/camera/imageprocessor/: PostProcessor.java  ZSLQueue.java
app/src/com/android/camera/ui/: PieRenderer.java
app/src/com/android/camera/util/: PersistUtil.java
app/src/org/codeaurora/snapcam/filter/: ClearSightImageProcessor.java  ClearSightNativeEngine.java
